--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,14 @@ __pycache__/
 # C extensions
 *.so
 
+#MacOS folders
+.DS_Store
+
+#Relevant to this project
+builds.xlsx
+repos/
+
+
 # Distribution / packaging
 .Python
 build/
