upgrade requirements.txt and add more info in readme and fix path for python scripts.

--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,11 @@ __pycache__/
 #Relevant to this project
 builds.xlsx
 repos/
-
+*.pkl
+*.csv
+*.html
+*.gguf
+llama.cpp/
 
 # Distribution / packaging
 .Python
