refactor: streamline cluster analysis process
consolidate python methods and treat the script as a CLI to help offer easier discoverability for
how to either analyze local logs or remote logs from artifactory

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,8 +1,19 @@
-FROM mcr.microsoft.com/devcontainers/python:3.12
+FROM mcr.microsoft.com/devcontainers/python:3.12 AS base
+COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
 
-COPY requirements.txt .
+FROM base AS dependencies
+WORKDIR /app
+COPY pyproject.toml .
+RUN uv pip install --system -r pyproject.toml
 
+FROM dependencies AS application
 COPY scripts/download_model.py .
 
-RUN pip install -r requirements.txt && \
-    python download_model.py
+FROM application AS models
+RUN uv run download_model.py
+
+FROM models AS final
+COPY scripts/* .
+
+RUN chmod +x entry-point.sh
+ENTRYPOINT ["./entry-point.sh"]
