--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
-    "build": {
-        "dockerfile": "Dockerfile",
-        "context": ".."
-    }
+  "build": {
+    "dockerfile": "../Dockerfile",
+    "context": ".."
+  }
 }
