--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "moderne-cluster-build-logs"
-version = "0.1.0"
-description = "Add your description here"
+version = "2.0.0"
+description = "A project for building and analyzing logs from the Moderne mass ingest process."
 readme = "README.md"
 requires-python = ">=3.12,<3.13"
 dependencies = [
