--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "tqdm>=4.67.1",
     "transformers==4.43.3",
     "umap-learn",
+    "click>=8.1.7",
 ]
 [tool.uv]
 constraint-dependencies = ["llvm>0.43.0","numba>=0.60.0"]
